# raspberry-pi-pico-tests

./: .gitignore  CMakeLists.txt
elf2uf2/: elf2uf2
pico-sdk/src/rp2_common/boot_stage2/: bs2_default.dis  bs2_default_padded_checksummed.S
pioasm/: pioasm
w_blink/: CMakeLists.txt  blink.c  picow_blink.dis  picow_blink.elf  picow_blink.elf.map  picow_blink.hex  picow_blink.uf2
w_connecting_to_internet/: CMakeLists.txt  connection.c  picow_connection.dis  picow_connection.elf  picow_connection.elf.map  picow_connection.hex  picow_connection.uf2
w_connection/: connection.c  picow_connection.dis  picow_connection.elf  picow_connection.elf.map  picow_connection.hex
